dynamically_typed_tests/invalid/variables/became_valid/basicTypeErr05.wacc
# type mismatch: bool <- char

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  b = 't'
end
